--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,3 +1,258 @@
+@import url(http://fonts.googleapis.com/css?family=Arimo:400,700);
+@mixin display($prop) {
+  @if $prop == flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: flex;
+  } @else {
+    display: $prop;
+  }
+}
+
+@mixin flex-direction($prop) {
+  @if $prop == row {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -moz-box-orient: horizontal;
+    -moz-box-direction: normal;
+  }
+  @if $prop == column {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -moz-box-orient: vertical;
+    -moz-box-direction: normal;
+  }
+  @if $prop == row-reverse {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -moz-box-orient: horizontal;
+    -moz-box-direction: reverse;
+  }
+  @if $prop == column-reverse {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -moz-box-orient: vertical;
+    -moz-box-direction: reverse;
+  }
+  -ms-flex-direction: $prop;
+  -webkit-flex-direction: $prop;
+  flex-direction: $prop;
+}
+
+@mixin align-items($prop) {
+  $oldprop: $prop;
+  @if $prop == flex-start { $oldprop: start; }
+  @if $prop == flex-end   { $oldprop: end; }
+  -webkit-box-align: $oldprop;
+  -moz-box-align: $oldprop;
+  -ms-flex-align: $oldprop;
+  -webkit-align-items: $prop;
+  align-items: $prop;
+}
+
+@mixin justify-content($prop) {
+  $oldprop: $prop;
+  @if $prop == flex-start    { $oldprop: start; }
+  @if $prop == flex-end      { $oldprop: end; }
+  @if $prop == space-between { $oldprop: justify; }
+  -webkit-box-pack: $oldprop;
+  -moz-box-pack: $oldprop;
+  -ms-flex-pack: $oldprop;
+  -webkit-justify-content: $prop;
+  justify-content: $prop;
+}
+
+@mixin flex($prop) {
+  -webkit-box-flex: $prop;
+  -moz-box-flex: $prop;
+  -ms-flex: $prop;
+  -webkit-flex: $prop;
+  flex: $prop;
+}
+
+@mixin order($prop) {
+  -webkit-box-ordinal-group: $prop + 1;
+  -moz-box-ordinal-group: $prop + 1;
+  -ms-flex-order: $prop;
+  -webkit-order: $prop;
+  order: $prop;
+}
+
+$btn-default: lighten(#194159, 20%); //<----- Change
+$btn-default-hover: lighten($btn-default, 10%);
+$btn-default-active: darken($btn-default, 5%);
+
+* {
+    font-family: 'Arimo', sans-serif;
+}
 body{
-	
+    margin: 0;
+    padding: 0;
+    background-image: url(grid_noise.png);
+}
+input{
+    padding: 5px;
+    font-size: 1.4em;
+    border-radius: 5px;
+    border: 1px #aaaaaa solid;
+    text-align: center;
+}
+.btn {
+    position: relative;
+    top: 0.07em;
+    font-size: 1.5em;
+    color: #ecf0f1;
+    margin: 5px;
+    border: none;
+    background-color: $btn-default;
+    padding: 3px 1em;
+    border-radius: 3px;
+    cursor: pointer;
+    border-width: 1px;
+    border-color: darken($btn-default, 20%);
+    border-style: solid;
+    &:hover{
+        background-color: $btn-default-hover;
+        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(250,250, 250, 0.3)), to(rgba(0, 0, 0, 0)));
+        background-image: -moz-linear-gradient(rgba(250,250, 250, 0.3), rgba(0, 0, 0, 0));
+        background-image: linear-gradient(rgba(250,250, 250, 0.3), rgba(0, 0, 0, 0));
+    }
+    &:active {
+        background-color: $btn-default-active;
+        box-shadow: 2px 2px 3px rgba(20,20,20,0.3) inset;
+        background-image: none;
+    }
+}
+select{
+    padding: 5px;
+    font-size: 1.4em;
+}
+.container{
+    position: relative;
+    padding: 1px 20px 20px 20px;
+    margin: 0;
+    width: 1080px;
+    margin: 0 auto;
+    background-color: #eeeeee;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+.social{
+    display: inline-block;
+    position: absolute;
+    top: 25px;
+    right: 0;
+}
+.hidden{
+    display: none !important;
+}
+#overlay{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #eeeeee;
+    z-index: 200;
+    span{
+        display: block;
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        margin-left: -200px;
+        text-align: center;
+        width: 400px;
+        font-size: 20px;
+    }
+}
+.color {
+    .red{
+        color: red;
+    }
+    .green{
+        color: green;
+    }
+    .blue{
+        color: blue;
+    }
+}
+.image{
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    .fps{
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+}
+.arrow{
+    position: relative;
+    top: 170px;
+    display: inline-block;
+    font-size: 30px;
+    margin: 0 5px;
+
+}
+.config-container{
+    background-color: #cccccc;
+    display: inline-block;
+    padding: 0 20px 20px 20px;
+    border-radius: 5px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    .config {
+        display: inline-block;
+        vertical-align: top;
+        margin-right: 20px;
+        text-align: center;
+        input {
+            width: 30px;
+            &.offset-value{
+                width: 60px;
+            }
+        }
+        &.effects{
+            margin-right: 110px;
+        }
+        &.divider{
+            position: relative;
+            top: 125px;
+            span {
+                font-weight: bold;
+                font-size: 20px;
+            }
+        }
+        .divisor-value, .offset-value{
+            position: relative;
+            top: 48px;
+        }
+    }
+}
+#save{
+
+}
+.capture-arrow{
+    top: 3px;
+    color: #2f7ba9;
+    display: inline-block;
+}
+.capture-container{
+    position: absolute;
+    right: 37px;
+    bottom: 50px;
+    @include display(flex);
+    @include flex-direction(column);
+    @include align-items(center);
+    width: 350px;
+    height: 300px;
+    text-align: center;
+    img{
+        width: 320px;
+        height: 240px;
+        border: 1px #cccccc solid;
+        border-radius: 3px;
+    }
 }
