--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,20 @@ input {
   border-radius: 5px;
   border: 1px #aaaaaa solid;
   text-align: center; }
+  input[type="range"] {
+    -webkit-appearance: none;
+    background-image: none;
+    padding: 2px;
+    border-radius: 20px;
+    width: 400px;
+    height: 5px; }
+    input[type="range"]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      -moz-apperance: none;
+      width: 20px;
+      height: 20px;
+      border-radius: 20px;
+      background-color: #2f7ba9; }
 
 .btn {
   position: relative;
