--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,11 @@
 @import url(http://fonts.googleapis.com/css?family=Arimo:400,700);
+@import url(http://fonts.googleapis.com/css?family=PT+Mono);
 * {
   font-family: 'Arimo', sans-serif; }
+
+pre, .code {
+  font-family: 'PT Mono', sans-serif;
+  display: inline; }
 
 body {
   margin: 0;
