--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Arimo:400,700);
+@import url(http://fonts.googleapis.com/css?family=PT+Mono);
 @mixin display($prop) {
   @if $prop == flex {
     display: -webkit-box;
@@ -86,6 +87,10 @@ $btn-default-active: darken($btn-default, 5%);
 
 * {
     font-family: 'Arimo', sans-serif;
+}
+pre, .code {
+    font-family: 'PT Mono', sans-serif;
+    display: inline;
 }
 body{
     margin: 0;
